# Falcon

./: .env.dev  .env.prod  .env.prod.db  Dockerfile  docker-compose.yml  mig.sh  pyproject.toml  requirements.txt  setup.cfg  test_request.py
apps/authentication/: forms.py  models.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_users_used_token.py  0003_users_type.py  0004_alter_users_type.py  0005_alter_users_email.py
apps/authentication/utils/: send_gmail.py  tokens.py
apps/products/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
apps/products/client/: admin.py
apps/products/fixtures/: categories.json  districts.json  regions.json
apps/products/migrations/: 0001_initial.py  0002_rename_productimages_productimage_and_more.py  0003_product_type_alter_product_discount_and_more.py  0004_shopping_cart.py  0006_rename_cart_shoppingcard.py  0010_product_owner.py  (+11 more)
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
haproxy/: Dockerfile  haproxy.cfg
nginx/: nginx.conf
root/: exceptions.py  settings.py  urls.py
static/: app.js
templates/admin/: base_site.html  change_form.html
templates/authentication/: base.html  email_page.html  forgot-password.html  login.html  logout.html  register.html  reset-password.html
templates/errors/: 404.html
templates/products/: add_product.html  base.html  edit_product.html  homepage.html  my_products.html  product-details.html  product-grid.html  product-list.html  shopping-cart.html
templates/similarities/: footer_con.html  header_con.html  navbar.html
(+9 files in other folders)
